# simplicio-local

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DOD.md  GOAL_RESULT.md  NOTICE  PROGRESS.md  README.md  README.pt-BR.md  US4-V6-simplicio.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json
.github/workflows/: ci.yml  dod.yml
.simplicio/: architecture-inventory.json  call-graph.json  index-state.json  precedent-index.json  project-map.json  symbol-index.json
.specs/: README.md
.specs/architecture/: ADR-010-adopt-colibri-engine.md
.specs/product/: DOMAIN.md  PERSONAS.md  VISION.md
.specs/runtime/: CLI-CONTRACT.md  HARDWARE-PROBE.md  PLAYWRIGHT-SMOKE.md  README.md  SERVE-OPENAI.md  TELEMETRY.md
.specs/sprints/: BACKLOG.md  TIMELINE.md
READMEs/: README.ar-SA.md  README.en.md  README.es-ES.md  README.fr-FR.md  README.he-IL.md  README.hi-IN.md  README.id-ID.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.ms-MY.md  README.pl-PL.md  README.pt-BR.md  README.ru-RU.md  README.zh-CN.md
apps/cli/: main.cpp
apps/web-chat/: README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
docs/: assessment-llm-tier1-16gb.md  issue-audit-2026-07-22.md  readme-globalization-standard.md
docs/baselines/: 16gb-glm52-baseline.md  glm52-16gb-capture.schema.json  glm52-16gb-prompts.json  glm52-dense-breakdown.md
docs/benchmarks/: METHODOLOGY.md  README.md  quality-run.schema.json
docs/hardening/: buffer-inventory.md
docs/profiles/: 16gb.md
docs/protocols/: simplicio-local-inference-backend-v1.md
engine/: CMakeLists.txt  README.md
engine/c/: .gitignore  Makefile  backend.py  backend_contract.py  backend_cuda.cu  backend_cuda.h  coli  compat.h  doctor.py  glm.c  iobench.c  json.h  olmoe.c  openai_server.py  ref_kimi.json  resource_plan.py  setup.sh  st.h  tier.h  tok.h  tok_unicode.h
runtime/: CMakeLists.txt  README.md
runtime/adapters/: dense_adapter_base.cpp  dense_adapter_base.h
runtime/ane/: README.md  ane_backend.cpp  ane_backend.h  layer_offloader.cpp  layer_offloader.h  mixed_dispatch.cpp  mixed_dispatch.h
runtime/benchmarks/: CMakeLists.txt  README.md  dense_baseline.cpp  dense_stream_demo.cpp  kernel_cpu_benchmarks.cpp  neon_lowbit_observability.h
runtime/benchmarks/correctness/: CMakeLists.txt  correctness_check.cpp
runtime/cache/: README.md  multimodal_cache.cpp  multimodal_cache.h  sparsity_aware_cache.cpp  sparsity_aware_cache.h
runtime/core/: backend_selector.cpp  gguf_reader.cpp  gguf_reader.h  ius4v6_adapter.h  local_inference_policy.cpp  local_inference_policy.h  model_asset.cpp  model_asset.h  runtime_context.cpp  runtime_context.h  safetensors_reader.cpp  safetensors_reader.h
runtime/cpu/: README.md  int8_matmul.cpp  int8_matmul.h
runtime/dense/: README.md  layer_stream.cpp  layer_stream.h
runtime/fuzz/: CMakeLists.txt  README.md  fuzz_bpe_tokenizer.cpp  fuzz_dequant_int8.cpp  fuzz_gguf_reader.cpp  fuzz_json_value.cpp  fuzz_safetensors_reader.cpp  fuzz_temp_file.h
runtime/kv/: README.md  ssd_cold_store.cpp  summarizer.cpp  summarizer.h
runtime/metal/: README.md  autorelease_scope.cpp  autorelease_scope.h  autorelease_scope.mm  command_queue.cpp  command_queue.h  dense_dispatch.cpp  dense_dispatch.h  device_info.cpp  device_info.h  kernel_library.cpp  native_metal_backend.h  native_metal_backend.mm  native_metal_backend_stub.cpp
runtime/mlx/: README.md  dense_plan.cpp  dense_plan.h  mlx_bridge.cpp  mlx_bridge.h  native_mlx_backend.cpp  native_mlx_backend.h  native_mlx_backend_stub.cpp
runtime/moe/: README.md  router.cpp  router.h  speculative_prefetch.cpp  speculative_prefetch.h
runtime/neon/: README.md  neon_attention.cpp  neon_matmul.cpp  neon_matmul.h
runtime/net/: native_http_server.cpp  native_http_server.h  openai_chat_handler.cpp  openai_chat_handler.h
runtime/scheduler/: continuous_batcher.cpp  continuous_batcher.h  session_pool.cpp  session_pool.h
scripts/: capture_glm52_16gb_baseline.py  coverage.sh  openai_serve.py  requirements-serve.txt  seed_quant_fuzz_corpus.py
test/: cli.test.js  us4-cli.test.js
tests/: CMakeLists.txt
tests/baselines/: test_capture_glm52_16gb_baseline.py
tests/e2e/: us4-cli-serve.spec.ts  us4-cli.spec.ts
tests/fixtures/engine/: run_engine_forward_oracles.py  run_engine_tokenizer_contract.py  test_runner_skip_contract.py
tests/fixtures/gguf/: generate_toy_gguf.py  toy_real.gguf
tests/fixtures/models/deepseek-v2-lite/: experts-00.safetensors  experts-01.safetensors  model.us4manifest
tests/fixtures/models/kimi-k2-instruct/: model.us4manifest
tests/fixtures/models/llama-3.1-8b/: draft-llama.gguf  model.us4manifest
tests/fixtures/models/toy-llama-real/: generate_toy_llama_real.py  model.us4manifest  toy-llama-real.safetensors
tests/fixtures/models/toy-moe-real/: expert1.safetensors  generate_toy_moe_real.py  model.us4manifest  toy-moe-real.safetensors
tests/fixtures/safetensors/: generate_toy_safetensors.py  toy_real.safetensors
tests/unit/: CMakeLists.txt  adapter_generation_contract_test.cpp  backend_selector_contract_test.cpp  benchmark_observability_contract_test.cpp  cpu_int8_dispatch_contract_test.cpp  dense_layer_stream_contract_test.cpp  dense_layer_stream_smoke_test.cpp  error_paths_contract_test.cpp  gguf_reader_contract_test.cpp  kernel_numerics_contract_test.cpp  kv_cache_real_forward_contract_test.cpp  kv_cold_store_summarizer_contract_test.cpp  kv_contract_test.cpp  memory_contract_test.cpp  metal_device_kernel_contract_test.cpp  mlx_bridge_contract_test.cpp  model_asset_contract_test.cpp  moe_advanced_contract_test.cpp  moe_contract_test.cpp  moe_real_expert_weights_contract_test.cpp  native_apple_backend_parity_test.cpp  neon_contract_test.cpp  openai_chat_handler_contract_test.cpp  rope_contract_test.cpp  runtime_acceleration_contract_test.cpp  runtime_context_contract_test.cpp  runtime_contract_runner.cpp  runtime_smoke_test.cpp  safetensors_reader_contract_test.cpp  scheduler_contract_test.cpp  session_pool_contract_test.cpp  speculative_loader_contract_test.cpp
(+155 files in other folders)
